# Boring-Organizer-Bot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SECURITY.md  SYSTEM_AUDIT_SUMMARY.md  bob.yaml.example  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
bob/: __init__.py  config.py  watchlist.py
bob/agents/: __init__.py  mcp_server.py  tools.py
bob/answer/: __init__.py  audit.py  constants.py  formatter.py
bob/api/: __init__.py  app.py  schemas.py  templates.py  utils.py  write_permissions.py
bob/api/routes/: ask.py  connectors.py  decisions.py  documents.py  feedback.py  health.py  index.py  notes.py  open.py  permissions.py  projects.py  routines.py  settings.py
bob/cli/: __init__.py  main.py
bob/coach/: __init__.py  engine.py
bob/db/: __init__.py  database.py
bob/db/migrations/: 001_initial_schema.sql  002_vector_index.sql  003_coach_mode.sql  004_feedback_log.sql  005_permission_denials.sql  006_search_history.sql  007_search_history_not_found.sql  008_ingestion_errors.sql
bob/eval/: __init__.py  metrics.py  runner.py
bob/extract/: __init__.py  decisions.py  patterns.py
bob/health/: __init__.py  lint.py  priority.py
bob/index/: __init__.py  chunker.py  embedder.py  indexer.py
bob/ingest/: __init__.py  base.py  bookmarks.py  date_parser.py  excel.py  git_docs.py  markdown.py  pdf.py  recipe.py  registry.py  word.py
bob/retrieval/: __init__.py  query_parser.py  scoring.py  search.py
bob/ui/: index.html
bob/ui/static/css/: main.css
bob/ui/static/js/: api.js  app.js
bob/utils/: __init__.py  text.py
docs/: AGENTS.md  API_CONTRACT.md  COACH_MODE_SPEC.md  CURRENT_STATE.md  IMPLEMENTATION_PLAN.md  PERMISSIONS.md  ROUTINES_SPEC.md  TASK_TEMPLATES.md  TROUBLESHOOTING.md  UI_PLAN.md  architecture.md  contributing.md  conventions.md  data-model.md
docs/eval/: README.md  example_gold.jsonl
docs/templates/: daily-debrief.md  daily.md  decision.md  experiment.md  meeting.md  recipe.md  trip-plan.md  trip.md  weekly.md
docs/worklog/: 2025-12-23-fix-db-tests-and-verify-e2e.md
prompts/: README.md  citation_agent.md  decision_agent.md  docs_agent.md  eval_agent.md  indexer_agent.md  retrieval_agent.md
prompts/system/: retrieval.md
tests/: __init__.py  conftest.py  test_agent_tools.py  test_api.py  test_api_connectors.py  test_audit.py  test_bookmarks.py  test_capture_lint.py  test_chunker.py  test_coach_rules.py  test_database.py  test_date_parser.py  test_decisions.py  test_eval_metrics.py  test_eval_runner.py  test_formatter.py  test_indexing.py  test_ingest_markdown.py  test_integration.py  test_mcp_auth.py  test_mcp_server.py  test_parser_consistency.py  test_priority.py  test_query_parser.py  test_scoring.py  test_search.py  test_ui_html.py  test_watchlist.py
vault/meetings/main/: meeting-2025-12-25-prep.md
